--- a/python-app.conf
+++ b/python-app.conf
@@ -1,11 +1,11 @@
 [program:pythonapp]
-directory=/opt/app/justalgotrades-python
-command=/opt/app/justalgotrades-python/env/bin/honcho start -f ./procfile hello
+directory=/opt/app
+command=/opt/app/env/bin/honcho start -f ./procfile hello
 autostart=true
 autorestart=true
 user=pythonapp
 # Environment variables ensure that the application runs inside of the
 # configured virtualenv.
-environment=VIRTUAL_ENV="/opt/app/justalgotrades-python/env",PATH="/opt/app/justalgotrades-python/env/bin",HOME="/home/pythonapp",USER="pythonapp"
+environment=VIRTUAL_ENV="/opt/app/env",PATH="/opt/app/env/bin",HOME="/home/pythonapp",USER="pythonapp"
 stdout_logfile=syslog
 stderr_logfile=syslog
