--- a/python-app.conf
+++ b/python-app.conf
@@ -2,7 +2,7 @@
 directory=/opt/app/justalgotrades
 command=/opt/app/justalgotrades/env/bin/honcho start -f ./procfile hello
 autostart=true
-autorestart=true
+autorestart=false
 user=pythonapp
 # Environment variables ensure that the application runs inside of the
 # configured virtualenv.
